--- a/Core.Tests/ServiceBusDriver.Core.Tests.csproj
+++ b/Core.Tests/ServiceBusDriver.Core.Tests.csproj
@@ -7,7 +7,27 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="TestData\topicProperties.json" />
+    <None Remove="TestData\topicResponseDto.Expected.json" />
+    <None Remove="TestData\topicRuntimeProperties.json" />
+    <None Remove="TestData\topics.single.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="TestData\topicResponseDto.Expected.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TestData\topicProperties.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TestData\topicRuntimeProperties.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+    <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -22,6 +42,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\ServiceBusDriver.Core.csproj" />
+  </ItemGroup>
+
+	<ItemGroup>
+    <Compile Update="TestData\ConnectionTestData.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
   </ItemGroup>
 
 </Project>
